assets/css/style.css
/*Debug*/
/*.debug header {
       background-color: aqua;
}*/

/*.debug main {
    height: 6000px ;
}

.debug #business_choice {
    padding-top: 100px;
    height: 1850px;
    background-color: chocolate;
}*/

/*.debug #operation {
    height: 1900px;
    background-color: rgb(24, 211, 33);
}*/

/*.debug #designit {
    background-color: rgb(226, 38, 164);
}*/

/*.debug footer {
    background-color: brown;
}

.debug .img60 {
    background-color: coral;
}

.debug .text40 {
    background-color: rgb(8, 109, 4);
}*/

/*.debug .designit_left {
    background-color: black;
    height: 500px;
}

.debug .designit_right {
    background-color: black;
    height: 500px;
}

.debug .light_adv {
    background-color: var(--drop-light);
}*/



/*Colours*/
:root {
    --drop-lighter: rgba(255, 255, 255, 1);
    --drop-light: rgba(180, 208, 231, 1);
    --drop-logo: rgba(0, 97, 255, 1);
    --drop-dark: rgba(1, 1, 1, 1);
    --drop-table-light: #ededef;
    --drop-bg-square1a: #A2D39B;
    --drop-bg-square1d: #FF1C1C;
    --drop-bg-square1b: #61082B;
    --drop-bg-square1c: #0093CE;
    --drop-bg-square2a: #D5001F;
    --drop-bg-square2b: #B4D0E7;
    --drop-bg-square2c: #0D2481;
    --drop-bg-square2d: #FFD830;
    --drop-bg-square_big: #F5F5F5;
}


/*Reset CSS*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/*Utilities*/
.container_55 {
    max-width: 55%;
    margin: auto;
}

.container_65 {
    max-width: 65%;
    margin: auto;
}

.d-flex {
    display: flex;
}

ul {
    /* list-style: none;*/
    padding: 5px;
    list-style: none;
}

.blue_btn {
    color: var(--drop-lighter);
    border: 0;
    padding: 3px;
    padding-left: 10px;
    padding-right: 10px;
    background-color: var(--drop-logo);
    font-size: 10px;
}

.small_text {
    font-size: 10px;
    line-height: 13px;
    font-weight: 200;
}

.big_text {
    font-size: 30px;
    font-weight: 900;
}

.titles {
    padding-bottom: 20px;
}

.bold {
    font-weight: bold
}

.fa-check {
    color: var(--drop-logo);
}


/*Widht measures*/
.col4 {
    width: calc((100%/12)*4);
}

.col8 {
    width: calc((100%/12)*8);
}

.col6 {
    max-width: calc(100%/12*6);
}

.col20 {
    max-width: calc((100%/12)*(12/5));
}

.img60 {
    max-width: 60%;
}

.text40 {
    max-width: 40%;
    padding: 30px;
}


/*big things*/
body {
    font-family: 'Open Sans', sans-serif;
    position: relative;
}


/*Header*/

#site_nav {
    height: 40px;
    justify-content: space-between;
    align-items: center;
    padding-left: 10px;
    padding-right: 10px;
    position: fixed;
    /* Set the navbar to fixed position */
    top: 0;
    /* Position the navbar at the top of the page */
    width: 100%;
    background-color: white;
}

#logo_nav {
    padding-top: 3px;
    height: 18px;
    padding-right: 15px;
}

.nav_list {
    font-size: 10px;
    padding-right: 15px;
    gap: 20px;

}

.menu_show {
    text-decoration: none;
    background: white;
    position: relative;
}

.menu_show ul li
{
display: none;
}

.menu_show:hover ul li
{
display: block;
position: absolute;
z-index:1;
width:100%;
padding: 5%;
margin: 0px;
background: white;
}




/*Main*/

/*Jumbotron*/
#jumbotron {
    background-color: var(--drop-light);
    padding-top: 3%;
}

.jumbo_title {
    font-weight: bolder;
    font-size: 279%;
    padding-top: 40px;
    padding-right: 100px;
    padding-bottom: 30px;
}

#jumbo_pic {
    max-width: 100%;
    margin-bottom: -4rem;
}

.jumbo_left * {
    padding-bottom: 20px;
}

.jumbo_left>p:last-child {
    padding-bottom: 0;
}

.start_free {
    padding-top: 8px;
    padding-bottom: 8px;
}

/*Jumbotron-end*/



/*Business-choice*/


.radio_check_box {
    align-items: center;
    gap: 20p;
}

.radio_text {
    padding-right: 20px;
}

#business_choice {
    padding-top: 6%;
}

#fatturazione {
    padding: 25px;
    padding-left: 0;
}

.card_title {
    font-size: 18px;
    font-weight: bold;
}

.business_card_container {
    gap: 3%;
}

.business_card {
    border: 1px solid var(--drop-table-light);
    margin-bottom: 30px;
}

.business_card>* {
    padding: 15px;
}

.month {
    font-weight: bold;
    padding-top: 1px;
    font-weight: lighter;

}

.euro {
    padding-bottom: 1px;
    font-weight: bold;
}

.options {
    text-align: center;
    border-bottom: 1px solid var(--drop-table-light);
    padding: 6px;
}

.fa-ul>li {
    padding-bottom: 10%;
    padding-left: 5%;
}

li>.fa-li {
    padding-left: 10%;
}

.container_oriz {
    justify-content: space-between;
}

.oriz_left {
    width: 70%;
}

.oriz_left>* {
    padding-bottom: 12px;
}

.oriz_left>.bold {
    padding-bottom: 25px;
}

.oriz_right {
    width: 30%;
    padding-left: 20px;
}




.partner_container {
    padding-top: 40px;
    padding-bottom: 80px;
}

.text40>* {
    padding-bottom: 10px;
}

.btn_partner {
    border-radius: 0;
    padding: 3%;
    border: 1px solid black;
    background-color: var(--drop-lighter);
}

.btn_card {
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
}

/*/Business-end*/


/*Operation*/
#operation {
    padding-bottom: 100px;
}

.operation_card_container {
    flex-wrap: wrap;
    padding-bottom: 100px;
}

.operation_card {
    margin: 3px;
    padding-bottom: 15%;
}

.operation_img {
    width: 100%;
}


/*Operation-end*/


/*Designit L/C/R*/
/*L/R*/
.banners>div * {
    padding-top: 3%;
    padding-bottom: 3%;
}

.designit_left,
.designit_right {
    flex-wrap: wrap;
    align-items: center;
}

.designit_img_grill {
    width: 50%;
    filter: invert();
}

.designit_img_grill_bg {
    width: 50%;
    height: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}


.designit_left>img,
.designit_right>img {
    height: 50%;
}

/*Colours*/
.designit_left>div:first-child {
    background-color: var(--drop-bg-square1a);
    border: 10px solid #d1e9cd;
}

.designit_left>div:nth-child(2) {
    background-color: var(--drop-bg-square1b);
}

.designit_left>div:nth-child(3) {
    background-color: var(--drop-bg-square1c);
}

.designit_left>div:nth-child(4) {
    background-color: var(--drop-bg-square1d);
}


.designit_right>div:first-child {
    background-color: var(--drop-bg-square2a);
}

.designit_right>div:nth-child(2) {
    background-color: var(--drop-bg-square2b);
}

.designit_right>div:nth-child(3) {
    background-color: var(--drop-bg-square2c);
}

.designit_right>div:nth-child(4) {
    background-color: var(--drop-bg-square2d);
}

/*Center*/
.designit_center {
    background-color: var(--drop-bg-square_big);
    padding: 2%;
    padding-bottom: 11%;
}

.designit_center>* {
    padding: 2%;
}

.designit_center_img {
    width: 50%;

}

.light_adv {
    background-color: var(--drop-light);
}

.call_to_action {
    padding-top: 8%;
    padding-bottom: 8%;
    justify-content: space-between;
}


.btn_free {
    width: 100%;
    border: 0;
    padding: 3px;
    padding-left: 20px;
    padding-right: 20px;
}

.faq {
    padding-top: 10%;
    padding-bottom: 10%;
}


.faq_li {
    padding-top: 15px;
    padding-bottom: 15px;
}

#footer_container {
    background-color: black;
    color: white;
    padding-top: 5%;
}

.foot_spread {
    justify-content: space-between;
    padding-bottom: 5%;
}

.card_footer h4 {
    padding-bottom: 15%;
}

.card_footer li {
    padding-top: 3%;
    padding-bottom: 3%;
}

.best_nation {
    padding-top: 5%;
    padding-bottom: 5%;
}

